# MedTrack-IA

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  PLANO_MODERNIZACAO.md  README.md  SECURITY.md  compose.yaml  pyproject.toml  railway.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: codeql.yml  model-artifact-smoke.yml  quality.yml  release-image.yml
config/: campos.yaml
config/models/: medtrack-yolo-v1.0.0.json
config/training/: dataset.yaml
dataset/labels/train/: 20260326_210037.txt  20260326_210037_aug1.txt  20260326_210037_aug2.txt  20260326_210037_aug3.txt  20260326_210037_aug4.txt  20260326_210037_aug5.txt  20260326_210049.txt  20260326_210049_aug1.txt  20260326_210049_aug3.txt  20260326_210049_aug4.txt  20260326_210049_aug5.txt  20260326_210050.txt  20260326_210050_aug1.txt  20260326_210050_aug2.txt  (+680 more)
docker/: entrypoint.sh
docs/: CI_CD.md  CONTAINER.md  GOVERNANCE.md  INVENTARIO_ATUAL.md  RAILWAY.md  TESTING.md  architecture.md  decisions.md  melhorias.md
docs/adr/: 0001-gerenciamento-de-dependencias-com-uv.md  0002-layout-src-e-fronteiras-do-produto.md  0003-github-releases-para-artefatos-de-modelo.md  0004-tags-separadas-para-api-e-modelo.md  README.md
docs/contracts/: api-v1.md
docs/models/: README.md
scripts/: fetch_model.py
src/api/: api.py  main.py  ocr_extration.py
src/medtrack_ai/: __init__.py  observability.py  settings.py
src/training/: augmentation.py  train.py
src/utils/: labeling.py  text_processor.py
tests/: test_api.py  test_model_manifest.py
tests/model/: test_model_artifact_smoke.py
tests/unit/: test_settings.py  test_text.py
(+16 files in other folders)
