[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "medtrack-ai"
version = "0.1.0"
description = "Serviço de inferência e ferramentas de treinamento do MedTrack."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "UNLICENSED" }
authors = [{ name = "MedTrack" }]
dependencies = [
  "fastapi==0.110.0",
  "numpy==1.26.4",
  "opencv-python-headless>=4.9,<5",
  "pydantic-settings>=2.2,<3",
  "python-multipart==0.0.9",
  "uvicorn==0.27.1",
]

[dependency-groups]
inference = [
  "easyocr==1.7.1",
  "ultralytics==8.3.162",
]
training = [
  "ultralytics==8.3.162",
]
dev = [
  "httpx>=0.27,<0.29",
  "pre-commit>=3.7,<5",
  "pytest>=8.0,<9",
  "pytest-cov>=5,<7",
  "pyright>=1.1.360,<2",
  "ruff>=0.5,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/medtrack_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not model' --cov=medtrack_ai --cov-report=term-missing"
markers = [
  "unit: teste rápido e isolado, sem rede, modelo ou sistema de arquivos externo.",
  "integration: teste da integração HTTP interna com adaptadores falsos.",
  "model: smoke test opcional que usa artefato de modelo local já verificado.",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI declara campos multipart no padrão File(...).
"src/api/api.py" = ["B008"]
"src/medtrack_ai/api/main.py" = ["B008"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
